// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reder UserBlock Render sign in link if not authorized 1`] = `
<div
  className="user-block"
>
  <a
    className="user-block__link"
    href="/login"
    onClick={[Function]}
  >
    Sign in
  </a>
</div>
`;

exports[`Reder UserBlock Render user avatar if authorized 1`] = `
<div
  className="user-block"
>
  <a
    href="/mylist"
    onClick={[Function]}
  >
    <div
      className="user-block__avatar"
    >
      <img
        alt="User avatar"
        height="63"
        src="//htmlacademy-react-3.appspot.com/avatar-test/url"
        width="63"
      />
    </div>
  </a>
</div>
`;
